src/base/master/layouts/backend-service.ok.yaml
############################### Backend App
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ssp-master
  name: ssp-backend
  labels:
    app: ssp-backend-label
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ssp-backend
  template:
    metadata:
      labels:
        app: ssp-backend-label
        service: ssp-backend
    spec:
#      restartPolicy: Always
      containers:
        - name: ssp-backend
          image: kbalazsworks/smart_scrum_poker_backend_native:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: ssp-master
  name: ssp-backend
  labels:
    app: ssp-backend-label
    service: ssp-backend
spec:
  type: NodePort
  selector:
    app: ssp-backend-label
    service: ssp-backend
  ports:
    - name: http
      protocol: TCP
      port: 46001
      targetPort: 8080
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: lofaszka9
#  namespace: ssp-master
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: nginx
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: "hello-world.local"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/"
#            backend:
#              service:
#                name: ssp-backend
#                port:
#                  number: 46001


---
### Backend App - PSQL


apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ssp-master
  name: backend-psql
  labels:
    app: backend-psql-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-psql-label
  template:
    metadata:
      labels:
        app: backend-psql-label
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
          imagePullPolicy: IfNotPresent
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ssp-master
  name: backend-psql-service
spec:
  type: LoadBalancer
  ports:
    - port: 47030
      targetPort: 5432
  selector:
    app: backend-psql-label
