src/base/master/layouts/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ssp-master
  name: ssp-frontend
  labels:
    app: ssp-frontend-label
spec:
  replicas: 1
  selector:
    matchLabels:
      service: ssp-frontend
  template:
    metadata:
      labels:
        app: ssp-frontend-label
        service: ssp-frontend
    spec:
      containers:
        - name: ssp-frontend
          image: kbalazsworks/smart_scrum_poker_frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
          volumeMounts:
            - name: custom-404-page
              mountPath: /usr/share/nginx/html
      volumes:
        - name: custom-404-page
          configMap:
            name: custom-404-page

---

apiVersion: v1
kind: Service
metadata:
  namespace: ssp-master
  name: ssp-frontend
  labels:
    app: ssp-frontend-label
    service: ssp-frontend-service
spec:
  type: NodePort
  selector:
    app: ssp-frontend-label
    service: ssp-frontend
  ports:
    - name: "http"
      protocol: TCP
      port: 48010
      targetPort: 80

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ssp-frontend-ingress
#  namespace: ssp-master
#  annotations:
#    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/use-regex: "true"
#spec:
#  rules:
#    - host: ssp.dev
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ssp-frontend
#                port:
#                  number: 80
