src/base/master/layouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asd1-be
  namespace: ssp-master
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippets: |
      location /ws {
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "Upgrade";
        proxy_set_header Proxy "";
        proxy_set_header Host $http_host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_pass http://ws;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "api-ssp.balazskrizsan.com"
        - "ssp.balazskrizsan.com"
      secretName: ssm-dot-local
  rules:
    - host: "api-ssp.balazskrizsan.com"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: ssp-backend
                port:
                  number: 46001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asd1-fe
  namespace: ssp-master
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "api-ssp.balazskrizsan.com"
        - "ssp.balazskrizsan.com"
      secretName: ssm-dot-local
  rules:
    - host: "ssp.balazskrizsan.com"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/(.*)"
            backend:
              service:
                name: ssp-frontend
                port:
                  number: 48010
